--- a/mod_ventas/sub_mod_facturas/templates/sub_mod_facturas/facturas_list.html
+++ b/mod_ventas/sub_mod_facturas/templates/sub_mod_facturas/facturas_list.html
@@ -55,7 +55,7 @@
                 {% endif %}
             
               <span class="current">
-                Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+                Página {{ page_obj.number }} de {{ page_obj.paginator_class.num_pages }}.
               </span>
                 
               {% if page_obj.has_next %}
