Order cancel button - global fixes

--- a/mod_login/templates/mod_login/register_user.html
+++ b/mod_login/templates/mod_login/register_user.html
@@ -31,6 +31,6 @@
 				</ul>
 			</div>
 		</form>
-		<button type="submit" form="f-register" class="btn mt-5 mx-auto">Submit</button>
+		<button type="submit" form="f-register" class="btn mt-5 mx-auto">Registrar</button>
     </div>
 {% endblock content %}
