--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/tipo_producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/tipo_producto_list.html
@@ -10,7 +10,7 @@
     <section class="list-container">
         <div class="buttons-container">
           <a  class="btn d-inline" href="{% url 'tipo_producto_create' %}">
-            Crear Nuevo Tipo de Producto
+            Crear Tipo de Producto
             <img class="btn-icon" src="{% static 'icons/Add.svg' %}" alt="icono de añadir">
           </a>
         </div>
