--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -8,10 +8,6 @@
 {% block content %}  
     <section class="list-container">
       <div class="buttons-container">
-        <a  class="btn d-inline" href="{% url 'producto_report' %}">
-          Generar Reporte
-          <img class="btn-icon" src="{% static 'icons/PDF.svg' %}" alt="icono de pdf">
-        </a>
         <a  class="btn d-inline" href="{% url 'producto_crear' %}">
           Añadir Producto
           <img class="btn-icon" src="{% static 'icons/Add.svg' %}" alt="icono de añadir">
@@ -19,6 +15,10 @@
         <a  class="btn d-inline" href="{% url 'tipo_producto_list' %}">
           Tipos de producto
           <img class="btn-icon" src="{% static 'icons/Add.svg' %}" alt="icono de pago">
+        </a>
+        <a  class="btn d-inline" href="{% url 'producto_report' %}">
+          Generar Reporte
+          <img class="btn-icon btn-report-icon" src="{% static 'icons/excel.png' %}" alt="icono de pdf">
         </a>
       </div>
       <section class="bottom-section d-flex justify-content-center">
