--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             </button>
           {% endif %}
           <div class="logo-container">
-            <a class="navbar-brand" href="{% url 'home' %}">
+            <a class="navbar-brand" href="{% url 'lista_ordenes' %}">
               <img class="logo" src="{% static 'img/logo.svg' %}" alt="Logo">
               DUNAMIS S.A
             </a>
