--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -27,13 +27,13 @@
             <thead>
               <tr class="table-header">
                 <th scope="col">Imagen</th>
+                <th scope="col">Producto ID<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Categoría<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Nombre<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Precio Venta<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Proveedor<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Stock<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Lote<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
-                <th scope="col">Stock<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Vencimiento<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Descripción<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Acciones</th>
