--- a/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
+++ b/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
@@ -26,7 +26,7 @@
           <table id="proveedorTable" class="table table-striped provider-table">
             <thead>
               <tr class="table-header">
-                <th scope="col">Id<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
+                <th scope="col"><p>Id<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></p></th>
                 <th scope="col">Nombre<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col">Correo<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
                 <th scope="col" class="number">Número Telefónico<img src="{% static 'icons/sort-icon.png' %}" alt="sort"></th>
